--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -19,7 +19,9 @@ bg:
     attributes:
       event:
         category: 'Категория'
+        category_id: 'Категория'
         media_type: 'Тип медия'
+        media_type_id: 'Тип медия'
         title: 'Заглавие'
         start_date: 'Начална дата'
         end_date: 'Крайна дата'
