--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -1,6 +1,7 @@
 bg:
   application:
     name: 'Таймлайн на българските медии'
+    title: '%{title} - %{application_name}'
 
   texts:
     details: 'Детайли'
