Add images to events and show them on the timeline
Closes #20.

--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -14,6 +14,7 @@ bg:
     formatting_hints: 'Това поле се форматира според правилата на Markdown.'
     events:
       end_date_hints: 'Не е задължително да посочите крайна дата.'
+      image_hints: 'Опционално изображение, което да се показва с описанието.'
     pages:
       slug_hints: 'Използвайте само латински букви, цифри, тирета и/или долни черти.'
 
@@ -51,6 +52,9 @@ bg:
         priority: 'Приоритет'
         people: 'Свързани личности'
         media: 'Свързани медии'
+        image: 'Изображение'
+        image_caption: 'Заглавие на изображението'
+        image_credit: 'Кредит за изображението'
       category:
         name: 'Име'
       media_type:
