Add support for an external image to events
External images are just hot-linked in the front-end. We need these
when we don’t have rights to upload an image to our site.

Uploaded images have a higher priority over external ones.

--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -14,7 +14,8 @@ bg:
     formatting_hints: 'Това поле се форматира според правилата на Markdown.'
     events:
       end_date_hints: 'Не е задължително да посочите крайна дата.'
-      image_hints: 'Опционално изображение, което да се показва с описанието.'
+      external_image_url_hints: 'Опционално външно изображение.'
+      image_hints: 'Опционално изображение, което да се показва с описанието. Има приоритет над външното изображение.'
     pages:
       slug_hints: 'Използвайте само латински букви, цифри, тирета и/или долни черти.'
 
@@ -55,6 +56,7 @@ bg:
         image: 'Изображение'
         image_caption: 'Заглавие на изображението'
         image_credit: 'Кредит за изображението'
+        external_image_url: 'Адрес до външно изображение'
       category:
         name: 'Име'
       media_type:
